--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>High Precision Pi Calculation</title>
   <style>
     body {
@@ -52,58 +53,54 @@
   <div id="calculation"></div>
   <div id="piValue"></div>
 
+  <!-- Include Decimal.js for high-precision calculations -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/10.2.1/decimal.min.js"></script>
 
   <script>
-    // Function to calculate Pi using the Chudnovsky algorithm
     function calculatePi(terms) {
-      let sum = new Decimal(0);
-      let C = new Decimal(426880).div(10005);  // Constant in the formula
-      let K = new Decimal(6);  // Starts at 6
-      let M = new Decimal(1);  // Starts at 1
-      let L = new Decimal(13591409);  // Starts at 13591409
-      let X = new Decimal(1);  // Starts at 1
-      let K3 = new Decimal(3);  // K * 3 starts at 3
-      let K6 = new Decimal(1);  // K * 6 starts at 1
-      let calculationSteps = '';
-      let step = 0;
+      const Decimal = window.Decimal;
+      const C = new Decimal(426880).mul(new Decimal(10005).sqrt()); // Constant multiplier for Pi
+      let sum = new Decimal(0); // Summation starts at 0
+      let M = new Decimal(1); // Initial value for M
+      let L = new Decimal(13591409); // Initial value for L
+      let X = new Decimal(1); // Initial value for X
+      let K = new Decimal(6); // Factorial-related constant
+      
+      let calculationSteps = ""; // To store intermediate calculation steps
 
-      // Calculate each term and accumulate the sum
       for (let k = 0; k < terms; k++) {
-        // Chudnovsky series term computation
-        let term = M.mul(L).mul(X).div(K3.pow(3).mul(K6));
-        sum = sum.add(term);  // Add the term to the sum
+        // Compute the term of the Chudnovsky series
+        const term = M.mul(L).div(X);
+        sum = sum.add(term);
 
-        // Add the step to the calculation log for visualization
-        calculationSteps += `Step ${step + 1}:\nM = ${M.toString()}, L = ${L.toString()}, X = ${X.toString()}, K = ${K.toString()}, Term = ${term.toString()}\n\n`;
-        
-        // Update variables for next iteration
-        M = M.mul(K3).mul(K3).div(K6);
-        L = L.add(545140134);
-        X = X.mul(-640320);
-        K = K.add(12);
-        K3 = K3.add(6);
-        K6 = K6.add(6);
+        // Log the step for visualization
+        calculationSteps += `Step ${k + 1}:\nM = ${M.toString()}\nL = ${L.toString()}\nX = ${X.toString()}\nTerm = ${term.toString()}\n\n`;
 
-        step++;
+        // Update variables for the next term
+        M = M.mul(K).mul(K - 1).mul(K - 2).div(new Decimal((k + 1) ** 3)); // M update
+        L = L.add(545140134); // L update
+        X = X.mul(new Decimal(-640320).pow(3)); // X update
+        K = K.add(12); // Increment K by 12
       }
 
-      // Pi approximation is 1 / sum * C
-      let piApproximation = sum.mul(C);
+      // Calculate Pi using the summation
+      const piApproximation = C.div(sum);
+
+      // Return the result and steps
       return { piApproximation: piApproximation.toString(), calculationSteps };
     }
 
-    // Function to display the calculation steps and animated Pi calculation
     function displayCalculation() {
-      const terms = 5;  // Number of terms to calculate Pi
+      const terms = 10; // Number of terms to compute
       const { piApproximation, calculationSteps } = calculatePi(terms);
 
-      document.getElementById('loading').style.display = 'none';  // Hide loading message
-      document.getElementById('calculation').innerText = calculationSteps;  // Show the calculation steps
-      document.getElementById('piValue').innerText = `Pi Approximation: ${piApproximation}`;  // Show the final approximation of Pi
+      // Display results on the webpage
+      document.getElementById("loading").style.display = "none"; // Hide the loading text
+      document.getElementById("calculation").innerText = calculationSteps; // Show calculation steps
+      document.getElementById("piValue").innerText = `Pi Approximation: ${piApproximation}`; // Show Pi approximation
     }
 
-    // Start the calculation and display the result
+    // Start the Pi calculation
     displayCalculation();
   </script>
 
